# modin-spreadsheet

./: .gitattributes  .gitignore  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  pytest_log.txt  requirements.txt  richard_test.ipynb  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml
docs/: conf.py  environment.yml
examples/: tutorial.ipynb
js/: package.json  webpack.config.js
js/src/: embed.js  extension.js  index.js  jupyterlab-plugin.js  qgrid.datefilter.js  qgrid.sliderfilter.js  qgrid.textfilter.js  qgrid.widget.js  spreadsheet.booleanfilter.js  spreadsheet.css  spreadsheet.datefilter.js  spreadsheet.filterbase.js  spreadsheet.sliderfilter.js  spreadsheet.textfilter.js  spreadsheet.widget.js
modin_spreadsheet/: __init__.py  _version.py  constants.py  grid.py  test_apply_history.py
modin_spreadsheet/tests/: test_grid.py
msheet/: __init__.py  _version.py  grid.py
msheet/tests/: test_grid.py
qgrid/: grid.py
qgrid/tests/: test_grid.py
