[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
exclude =
    .git,
    __pycache__,
    setup.py,
    docs

[versioneer]
VCS = git
style = pep440
versionfile_source = modin_spreadsheet/_version.py
versionfile_build = modin_spreadsheet/_version.py
tag_prefix =
parentdir_prefix = modin-
